--- a/ui/admin/templates/base.html
+++ b/ui/admin/templates/base.html
@@ -87,6 +87,9 @@ $def with (content)
 $:content
             <!--  End MAIN Content section. -->
             <div id="head" class="ui-widget-header">
+                <div id="app_header_logo" class="floatleft pointer">
+                    <span style="font-family: MuseoSlab-Light;">velocity</span><b>automate</b>
+                </div>
                 <!-- Main Menu  -->
                 <ul id="main-menu" class="sf-menu"></ul>
                 <!--   END Main Menu -->
