--- a/ui/cskui/templates/base.html
+++ b/ui/cskui/templates/base.html
@@ -30,7 +30,9 @@ $def with (content)
         <link rel="stylesheet" href="/common/vendor/css/foundation.css" />
         <link rel="stylesheet" href="/static/css/main.css" />
         <link rel="stylesheet" href="/common/vendor/css/jquery.meow.css" />
-
+        
+        <!--##HEAD##-->
+        
         <!--Any .css files defined on the content page.-->
 $if content.cssfiles:
     $for f in content.cssfiles.split():
@@ -60,9 +62,10 @@ $if content.cssfiles:
             <div class="left" style="margin-left: 10px;">
                 &copy; 2014 Cloud Sidekick
             </div>
-            <div class="right" style="margin-right: 10px; cursor: pointer;" title="About Legato">
+            <div class="right" style="margin-right: 10px; cursor: pointer;" title="About Velocity">
                 <div id="about_btn" class="glyphicon glyphicon-info-sign"></div>
             </div>
+            <!--##FOOTER##-->
         </div>
         <div id="fullwidthcontent" class="min900px">
             <!-- This is the MAIN Content section. -->
