new ui - ceased using web.py templator due to rigidity

--- a/ui/cskui/templates/home.html
+++ b/ui/cskui/templates/home.html
@@ -1,7 +1,8 @@
-$def with ()
-$var jsfilesroot: /static/js
-$var jsfiles: home.js
-$var cssfiles:
+<!--VARS:
+{
+    "js": ["/static/js/home.js"]
+}
+-->
 
 <div id="maincontent" class="clearfix">
     <div class="panel text-center">
