--- a/ui/cskui/templates/base.html
+++ b/ui/cskui/templates/base.html
@@ -1,4 +1,3 @@
-$def with (content)
 <!DOCTYPE html>
 <!--
 // #########################################################################
@@ -28,16 +27,13 @@ $def with (content)
         <link rel="shorcut icon" href="/static/img/favicon.ico" />
 
         <link rel="stylesheet" href="/common/vendor/css/foundation.css" />
-        <link rel="stylesheet" href="/static/css/main.css" />
+        <link rel="stylesheet" href="/static/css/global.css" />
         <link rel="stylesheet" href="/common/vendor/css/jquery.meow.css" />
-        
-        <!--##HEAD##-->
-        
-        <!--Any .css files defined on the content page.-->
-$if content.cssfiles:
-    $for f in content.cssfiles.split():
-        <link type="text/css" href="$f" rel="stylesheet" />
 
+        <!--##HEAD##-->
+
+        <!--Any .css files defined on the content page.-->
+        <!--##CSS##-->
     </head>
     <body>
         <nav id="app_header" class="top-bar" data-topbar>
@@ -69,7 +65,7 @@ $if content.cssfiles:
         </div>
         <div id="fullwidthcontent" class="min900px">
             <!-- This is the MAIN Content section. -->
-$:content
+            <!--##CONTENT##-->
             <!--  End MAIN Content section. -->
         </div>
         <!-- This is the popup "about" dialog. -->
@@ -159,16 +155,12 @@ $:content
         <script src="/common/js/url.js"></script>
         <script src="/common/js/alert.js"></script>
         <script src="/common/js/ajaxcore.js"></script>
-        <script src="/static/js/ajax.js"></script>
         <script src="/static/js/base.js"></script>
 
         <!-- The subapps may define an _after.html that's included here -->
         <!--##AFTER##-->
 
         <!-- Any .js files defined on the content page. -->
-$if content.jsfiles:
-    $for f in content.jsfiles.split():
-        <script src="$content.jsfilesroot/$f"></script>
-
+        <!--##JS##-->
     </body>
 </html>
