further improvements on the new ui core

--- a/ui/cskui/templates/base.html
+++ b/ui/cskui/templates/base.html
@@ -48,9 +48,10 @@
                 <!--##HEADER##-->
             </div>
             <div id="app_header_icons" class="right">
-                <div id="secure_menu_buttons"></div>
-                <div id="my_account_link" class="glyphicon glyphicon-user floatleft pointer app_header_icon" title="My Account"></div>
-                <div id="logout_btn" class="glyphicon glyphicon-log-out floatleft pointer app_header_icon" title="Log Out"></div>
+                <div id="menu_btn" class="glyphicon glyphicon-list left pointer app_header_icon" title="Menu"></div>
+                <div id="secure_menu_buttons" class="left"></div>
+                <div id="my_account_link" class="glyphicon glyphicon-user left pointer app_header_icon" title="My Account"></div>
+                <div id="logout_btn" class="glyphicon glyphicon-log-out left pointer app_header_icon" title="Log Out"></div>
             </div>
         </nav>
 
