--- a/ui/cskui/templates/not_allowed.html
+++ b/ui/cskui/templates/not_allowed.html
@@ -1,7 +1,6 @@
 <div id="fullwidthcontent">
-    <div class="ui-state-highlight ui-corner-all" style="margin-left: auto; margin-right: auto; width: 300px; padding: 20px;">
-        <img src="/common/img/icons/information_32.png" />
-        <h2 class="forceinline">Oops...</h2>
+    <div data-alert class="panel radius" style="margin-top: 70px; margin-left: auto; margin-right: auto; width: 400px;">
+        <h2><img src="/common/img/icons/information_32.png" /> Oops...</h2>
         <br />
         <br />
         <p>
