--- a/ui/cskui/templates/home.html
+++ b/ui/cskui/templates/home.html
@@ -8,7 +8,7 @@
     <div class="panel text-center">
         <h3>Welcome to <strong>velocity</strong></h3>
         <p>
-            Please select one of the <strong>velocity</strong> modules from the menu above.
+            Please select one of the <strong>velocity</strong> modules from the menu in the upper right.
         </p>
     </div>
 </div>
