--- a/ui/cskui/static/css/global.css
+++ b/ui/cskui/static/css/global.css
@@ -1,70 +1,84 @@
 @import url('/common/css/fonts.css');
 @import url('/common/css/sizing.css');
 /* @import url('/common/css/text.css');
-@import url('input.css'); */
+ @import url('input.css'); */
 
 body, html {
-	color:#58595B;
-	background-color:#BCBEC0;
-	height:100%;
-	max-height:100%;
-	font-family:'MuseoSans-Light','Lato',sans-serif;
+	color: #58595B;
+	background-color: #BCBEC0;
+	height: 100%;
+	max-height: 100%;
+	font-family: 'MuseoSans-Light', 'Lato', sans-serif;
 }
 iframe {
-	border:none;
-	width:100%;
+	border: none;
+	width: 100%;
 }
 li {
-	list-style-type:none;
+	list-style-type: none;
 }
 #app_header {
-	box-shadow:4px 2px 4px #555555;
-	left:0;
-	top:0;
-	margin-bottom:10px;
-	z-index:10;
-	position:fixed;
-	width:100%;
-	height:40px;
-	background-color:#B0B579;
+	box-shadow: 4px 2px 4px #555555;
+	left: 0;
+	top: 0;
+	margin-bottom: 10px;
+	z-index: 10;
+	position: fixed;
+	width: 100%;
+	height: 40px;
+	background-color: #B0B579;
 }
 #app_header_logo {
-	font-size:24pt;
-	color:#58595B;
-	position:absolute;
-	top:-6px;
-	left:10px;
+	font-size: 24pt;
+	color: #58595B;
+	position: absolute;
+	top: -6px;
+	left: 10px;
 }
 #app_header_title {
 	margin-top: -6px;
-	margin-left:250px;
+	margin-left: 250px;
 }
 #app_header_title span {
 	cursor: pointer;
 }
 #app_header_icons {
-	position:fixed;
-	right:10px;
+	margin-left: 20px;
+	margin-right: 20px;
+	margin-top: 10px;
+	margin-bottom: 14px;
 }
 .app_header_icon {
-	font-size:18px;
-	margin:0px 4px 0px 4px;
+	font-size: 18px;
+	margin: 0px 4px 0px 4px;
 }
+/* override a bit of the foundation dropdown menu */
+.top-bar-section .dropdown {
+	box-shadow: 0px 10px 14px #555;
+	margin-right: 10px;
+}
+.top-bar-section ul li, .top-bar-section .dropdown li a, .top-bar-section .dropdown li:not(.has-form) a:not(.button) {
+	background: #B0B579;
+}
+.top-bar-section ul li:hover, .top-bar-section .dropdown li a:hover, .top-bar-section .dropdown li:not(.has-form) a:not(.button):hover {
+	background: #979C5C;
+}
+/* end menu fixes */
 #app_footer {
-	height:18px;
-	font-weight:normal;
-	left:0;
-	bottom:0;
-	text-align:center;
-	z-index:10;
-	position:fixed;
-	width:100%;
-	background-color:#BCBEC0;
+	height: 18px;
+	font-weight: normal;
+	left: 0;
+	bottom: 0;
+	text-align: center;
+	z-index: 10;
+	position: fixed;
+	width: 100%;
+	background-color: #BCBEC0;
 }
 #maincontent {
-	margin-top:40px;
-	margin-bottom:20px;
-	padding:10px;
+	margin-top: 40px;
+	margin-bottom: 20px;
+	padding: 10px;
 }
 /*for floats*/
 .floatleft {
@@ -78,10 +92,10 @@ li {
 }
 /* this nudges the meow alerts down under the header */
 .meows {
-	top:40px !important;
+	top: 40px !important;
 }
 .pointer {
-	cursor:pointer;
+	cursor: pointer;
 }
 /* sometimes we just easily want block elements to be shown inline, without floating*/
 .forceinline {
@@ -89,13 +103,13 @@ li {
 }
 /* fix the meow plugin z-index */
 .meows {
-	z-index:999;
+	z-index: 999;
 }
 /* Override the bottom padding on the block-grid list items */
-[class*="block-grid-"]> li {
-	padding:0;
-	background-color:#f2f2f2;
-	border:2px solid #bcbec0;
+[class*="block-grid-"] > li {
+	padding: 0;
+	background-color: #f2f2f2;
+	border: 2px solid #bcbec0;
 }
 
 /* color changes for the jsoneditor */
